<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/news" />

        <item
            android:id="@+id/navigation_schemes"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/schemes" />


        <item
            android:id="@+id/navigation_events"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/events" />

        <item
            android:id="@+id/navigation_articles"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/articles" />


        <item
            android:id="@+id/navigation_videos"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/videos" />

        <item
            android:id="@+id/navigation_reports"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/crop_problems" />





    </group>


    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_us" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/help_support" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/terms_of_use" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
        </group>




</menu>
