<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_import_contacts_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_schemes"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/schemes" />


    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/events" />

    <item
        android:id="@+id/navigation_videos"
        android:icon="@drawable/ic_slow_motion_video_black_24dp"
        android:title="@string/channels" />


</menu>
