<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ForgotPasswordActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mainlogo" />

                <com.novaagritech.agriclinic.constants.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/forgot_password1"
                    android:textColor="#FF43A047" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextOTP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:ems="10"
                            android:hint="@string/enter_otp"
                            android:inputType="number"
                            android:maxLength="6"
                            android:padding="10dp"
                            android:textColor="@color/colorPrimary"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPasswrd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:ems="10"
                            android:hint="@string/create_new_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColor="@color/colorPrimary"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="end"
                        android:text="@string/resend_otp"
                        android:textColor="#FF43A047" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_button"
                    android:onClick="sendOtp"
                    android:padding="10dp"
                    android:text="@string/send_otp"
                    android:textColor="#FFFFFF"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonVerify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_button"
                    android:onClick="veriyOtp"
                    android:padding="10dp"
                    android:text="@string/verify_continue"
                    android:textColor="#FFFFFF"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:onClick="textSignIn"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textColor="#FF43A047"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
