<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:contentPadding="5dp"
    android:layout_marginTop="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/parentLayout">

        <!-- youtube thumbnail view to show the thumbnail of videos -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/video_thumbnail_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/thumbnail_image_view_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/image_not_available"
            android:adjustViewBounds="true"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/absListViewStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="visible"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/video_title_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/title_of_video"
                android:layout_weight="0.5"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/quantum_black_secondary_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/video_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/time_of_video"
                android:layout_weight="1.5"
                android:textColor="@color/quantum_grey"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>